--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/thumbs/
     - assets/icons/
 
   # To add assets to your application, add an assets section, like this:
